--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(demo-cpp-cmake VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(demo-cpp-cmake main.cpp)
+add_executable(demo-cpp-cmake main.cpp test1.cpp test2.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
