--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -80,4 +80,4 @@ jobs:
       with:
         name: "sarif-files"
         path: |-
-          ../results/*.sarif
+          /home/runner/work/demo-cpp-cmake/results/*.sarif
