--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -19,6 +19,7 @@ on:
 env:
   # Path to the CMake build directory.
   build: '${{ github.workspace }}/build'
+  config: 'Debug'
 
 permissions:
   contents: read
@@ -37,7 +38,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure CMake
-        run: cmake -B ${{ env.build }}
+        run: cmake -B ${{ env.build }} -DCMAKE_BUILD_TYPE=${{ env.config }}
 
       # Build is not required unless generated source files are used
       # - name: Build CMake
